--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:unit": "vue-cli-service test:unit",
     "docs:dev": "nuxt ./docs",
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate ./docs",
-    "deploy:docs": "push-dir --dir=/docs/dist --branch=gh-pages --cleanup"
+    "deploy:docs": "push-dir --dir=/docs/dist --branch=gh-pages --cleanup --remote=github"
   },
   "dependencies": {
     "core-js": "^2.6.5",
