--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "equal-vue",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": {
-    "name": "Yan Savinov"
+    "name": "Yan Savinov",
+    "email": "yan.savinov.hire@gmail.com"
   },
   "private": false,
   "license": "MIT",
+  "bugs": "https://github.com/quatrochan/Equal/issues",
+  "keywords": [
+    "equal",
+    "vue",
+    "vuejs",
+    "vue-components",
+    "ui",
+    "framework"
+  ],
   "main": "./dist/equal.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
