--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "equal-vue",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "author": {
     "name": "Yan Savinov",
     "email": "yan.savinov.hire@gmail.com"
@@ -35,6 +35,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-focus-lock": "^1.4.0",
     "vue-property-decorator": "^8.1.0"
   },
   "devDependencies": {
@@ -51,6 +52,8 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
+    "closure-webpack-plugin": "^2.3.0",
+    "google-closure-compiler": "^20200224.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "lint-staged": "^8.1.5",
@@ -59,6 +62,7 @@
     "prismjs": "^1.17.1",
     "push-dir": "^0.4.1",
     "ts-jest": "^23.0.0",
+    "typescript": "^3.7.3",
     "vue-prism-component": "^1.1.1",
     "vue-template-compiler": "^2.6.10"
   },
