--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "ES6",
+    "module": "ES6",
     "strict": false,
     "importHelpers": true,
     "moduleResolution": "node",
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowJs": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
