--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "docs:dev": "nuxt ./docs"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
