--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "equal-vue",
-  "version": "0.7.1",
+  "version": "0.7.14",
   "homepage": "https://quatrochan.github.io/Equal/",
   "description": "Equal is a Vue 3 UI library based on TypeScript",
   "author": {
     "name": "Yan Savinov",
     "email": "yan.savinov.hire@gmail.com"
   },
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "unpkg": "./dist/umd/index.js",
+  "main": "dist/equal.cjs.js",
+  "module": "dist/equal.esm.js",
+  "unpkg": "dist/equal.umd.min.js",
   "private": false,
   "license": "MIT",
   "bugs": "https://github.com/quatrochan/Equal/issues",
@@ -29,14 +29,32 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "node build.js"
+    "build": "npx rollup -c"
   },
   "peerDependencies": {
     "vue": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/plugin-transform-typescript": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@vue/babel-preset-app": "^4.5.6",
+    "@vue/babel-preset-jsx": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.2",
+    "babel-plugin-pure-calls-annotation": "^0.3.1",
+    "babel-plugin-typescript-iife-enum": "^0.2.1",
+    "clean-css": "^4.2.3",
+    "core-js": "^3.6.5",
     "less": "^3.12.2",
+    "rollup": "^2.22.1",
+    "rollup-plugin-filesize": "^9.0.2",
+    "rollup-plugin-less": "^1.1.2",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-vue": "^6.0.0-beta.11",
     "vite": "^1.0.0-rc.9"
   }
 }
