--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "equal-vue",
-  "version": "0.7.18",
+  "version": "0.7.20",
   "homepage": "https://quatrochan.github.io/Equal/",
   "description": "Equal is a Vue 3 UI library based on TypeScript",
   "author": {
     "name": "Yan Savinov",
     "email": "yan.savinov.hire@gmail.com"
   },
-  "main": "dist/equal.cjs.js",
-  "module": "dist/equal.esm.js",
+  "main": "./dist/equal-vue.umd.js",
+  "module": "./dist/equal-vue.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/equal-vue.es.js",
+      "require": "./dist/equal-vue.umd.js"
+    }
+  },
   "unpkg": "dist/equal.umd.min.js",
   "private": false,
   "license": "MIT",
@@ -29,10 +35,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "npx rollup -c"
-  },
-  "peerDependencies": {
-    "vue": "^3.0.2"
+    "build": "vite build"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
@@ -42,6 +45,7 @@
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@vitejs/plugin-vue": "^1.1.0",
     "@vue/babel-preset-app": "^4.5.6",
     "@vue/babel-preset-jsx": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.2",
@@ -50,11 +54,9 @@
     "clean-css": "^4.2.3",
     "core-js": "^3.6.5",
     "less": "^3.12.2",
-    "rollup": "^2.22.1",
-    "rollup-plugin-filesize": "^9.0.2",
-    "rollup-plugin-less": "^1.1.2",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-vue": "^6.0.0-beta.11",
-    "vite": "^1.0.0-rc.9"
+    "vite": "^2.0.0-beta.40"
+  },
+  "dependencies": {
+    "vue": "^3.0.2"
   }
 }
