--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
+    "@types/body-scroll-lock": "^2.6.1",
     "@vitejs/plugin-vue": "^1.1.0",
     "@vue/babel-preset-app": "^4.5.6",
     "@vue/babel-preset-jsx": "^1.1.2",
@@ -57,6 +58,7 @@
     "vite": "^2.0.0-beta.40"
   },
   "dependencies": {
+    "body-scroll-lock": "^3.1.5",
     "vue": "^3.0.5"
   }
 }
