--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
     "faker": "^5.1.0",
     "prismjs": "^1.23.0",
     "vue": "^3.0.5",
+    "body-scroll-lock": "^3.1.5",
     "vue-router": "^4.0.0-rc.1"
   },
   "devDependencies": {
