REFACTOR: decompose some state in ItSlider component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,10 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"]
     },
     "lib": [
       "esnext",
