REFACTOR: some refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,11 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@components/*": ["src/components/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
     "lib": [
       "esnext",
