ADD: customize eslint & stylelint & prettier

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,16 +12,18 @@
     "@vue/prettier",
     "@vue/prettier/@typescript-eslint"
   ],
+  "parser": "vue-eslint-parser",
   "parserOptions": {
+    "parser": "@typescript-eslint/parser",
     "ecmaVersion": 2021
   },
-  "plugins": [],
   "rules": {
     "vue/no-unused-vars": "error",
     "vue/no-v-html": "off",
     "arrow-parens": ["error", "always"],
     "padded-blocks": ["error", "never"],
     "import/prefer-default-export": "off",
-    "@typescript-eslint/no-var-requires": "off"
+    "@typescript-eslint/no-var-requires": "off",
+    "vue/component-definition-name-casing": [1, "kebab-case"]
   }
 }
