--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build_prod": "vite build --config prod.config.js"
+    "build_prod": "vite build --config prod.config.ts"
   },
   "dependencies": {
     "body-scroll-lock": "^3.1.5",
