Fixing issue with webstorm complaining about no module declaration. Also making library include only src and dist files

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     }
   },
   "unpkg": "dist/equal.umd.min.js",
+  "types": "src/types/index.d.ts",
   "private": false,
   "license": "MIT",
   "bugs": "https://github.com/quatrochan/Equal/issues",
@@ -23,6 +24,10 @@
     "type": "git",
     "url": "https://github.com/quatrochan/Equal"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "keywords": [
     "equal",
     "vue",
