--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "equal-vue",
-  "version": "0.74.0",
+  "version": "0.75.0",
   "homepage": "https://quatrochan.github.io/Equal/",
   "description": "Equal is a Vue 3 UI library based on TypeScript",
   "author": {
@@ -13,7 +13,8 @@
     ".": {
       "import": "./dist/equal-vue.es.js",
       "require": "./dist/equal-vue.umd.js"
-    }
+    },
+    "./dist/style.css": "./dist/style.css"
   },
   "unpkg": "dist/equal.umd.min.js",
   "types": "src/types/index.d.ts",
