--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "vitest run",
+    "test:dev": "vitest",
+    "tetet": "vitest -u",
     "lint:eslint": "eslint src/**/*.{ts,vue} docs/src/**/*.{ts,vue}",
     "lint:prettier": "prettier -w -u src/**/*.{ts,vue} docs/src/**/*.{ts,vue}",
     "lint:stylelint": "stylelint **/*.{less,vue} --syntax less"
@@ -64,6 +67,7 @@
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "autoprefixer": "^10.4.2",
     "babel-plugin-pure-calls-annotation": "^0.3.1",
     "babel-plugin-typescript-iife-enum": "^0.2.1",
     "clean-css": "^4.2.3",
@@ -74,12 +78,15 @@
     "husky": "4",
     "less": "^3.12.2",
     "lint-staged": "^10.5.4",
+    "postcss": "^8.4.6",
     "prettier": "^2.2.1",
     "stylelint": "^13.11.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.1.5",
     "vite": "^2.0.0-beta.40",
+    "vitest": "^0.5.9",
     "vue-eslint-parser": "^7.5.0"
   },
   "dependencies": {
