--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "lint-staged": "^10.5.4",
     "postcss": "^8.4.6",
     "prettier": "^2.2.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "stylelint": "^13.11.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
