--- a/newdocs/package.json
+++ b/newdocs/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@docsearch/js": "^3.0.0",
+    "colord": "^2.9.2",
     "mitt": "^3.0.0",
     "prismjs": "^1.28.0"
   }
