--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@types/body-scroll-lock": "^2.6.1",
-    "@types/tinycolor2": "^1.4.2",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "@vitejs/plugin-vue": "^1.1.0",
@@ -95,7 +94,7 @@
     "@vueuse/core": "^5.0.3",
     "@vueuse/integrations": "^5.0.3",
     "body-scroll-lock": "^3.1.5",
-    "tinycolor2": "^1.4.2",
+    "colord": "^2.9.2",
     "vue": "^3.0.5"
   }
 }
