--- a/newdocs/package.json
+++ b/newdocs/package.json
@@ -9,12 +9,13 @@
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "autoprefixer": "^10.4.5",
-    "nuxt": "3.0.0-rc.1",
+    "nuxt": "^3.0.0-rc.12",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.1.0"
   },
   "dependencies": {
     "@docsearch/js": "^3.0.0",
+    "@vueuse/core": "^9.3.1",
     "colord": "^2.9.2",
     "mitt": "^3.0.0",
     "prismjs": "^1.28.0"
