--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "equal-vue",
-  "version": "0.79.3",
+  "version": "0.9.0",
   "homepage": "https://quatrochan.github.io/Equal/",
   "description": "Equal is a Vue 3 UI library based on TypeScript",
   "author": {
@@ -37,6 +37,8 @@
     "typescript",
     "vue-components",
     "ui",
+    "tailwindcss",
+    "tailwind",
     "framework"
   ],
   "scripts": {
@@ -75,7 +77,7 @@
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.6.0",
-    "husky": "4",
+    "husky": "^4.3.8",
     "less": "^3.12.2",
     "lint-staged": "^10.5.4",
     "postcss": "^8.4.6",
