--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@docsearch/js": "^3.0.0",
     "@vueuse/core": "^9.3.1",
+    "@floating-ui/dom": "^0.5.4",
+    "body-scroll-lock": "^3.1.5",
     "colord": "^2.9.2",
     "mitt": "^3.0.0",
     "prismjs": "^1.28.0"
