--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,16 +12,16 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [latest]
+        node: [19]
 
     steps:
       - name: Checkout
         uses: actions/checkout@master
 
       - name: Setup node env
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v3
         with:
-          node-version: latest
+          node-version: 19
 
       - name: Install dependencies
         run: yarn
