nuxt config changes

--- a/docs/package.json
+++ b/docs/package.json
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "@docsearch/js": "^3.0.0",
+    "@floating-ui/dom": "^0.5.4",
     "@vueuse/core": "^9.3.1",
     "@vueuse/integrations": "^5.0.3",
-    "@floating-ui/dom": "^0.5.4",
     "body-scroll-lock": "^3.1.5",
     "colord": "^2.9.2",
     "mitt": "^3.0.0",
-    "prismjs": "^1.28.0"
+    "prismjs": "^1.28.0",
+    "vue-gtag": "^2.0.1"
   }
 }
