--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,7 @@
     "@nuxt/postcss8": "^1.1.3",
     "autoprefixer": "^10.4.5",
     "less": "^3.12.2",
-    "nuxt": "^3.0.0-rc.12",
+    "nuxt": "^3.1.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.1.0"
   },
