--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "equal-vue",
-  "version": "0.9.16",
+  "version": "0.9.17",
   "homepage": "https://equal-ui.github.io/Equal/",
-  "description": "Equal is a Vue 3 UI library based on TypeScript",
+  "description": "Equal is a Vue 3 hackable UI library empowered by tailwindcss",
   "author": {
     "name": "Yan Savinov",
     "email": "yan.savinov.hire@gmail.com"
@@ -93,6 +93,7 @@
     "typescript": "^4.9.4",
     "vite": "^2.0.0-beta.40",
     "vitest": "^0.5.9",
+    "vite-plugin-dts": "^1.7.2",
     "vue-eslint-parser": "^7.5.0"
   },
   "dependencies": {
@@ -101,7 +102,6 @@
     "@vueuse/integrations": "^5.0.3",
     "body-scroll-lock": "^3.1.5",
     "colord": "^2.9.2",
-    "vite-plugin-dts": "^1.7.2",
     "vue": "^3.0.5"
   }
 }
