--- a/docs/package.json
+++ b/docs/package.json
@@ -9,10 +9,10 @@
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "autoprefixer": "^10.4.5",
-    "less": "^3.12.2",
     "nuxt": "^3.1.0",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.1.0"
+    "tailwindcss": "^3.1.0",
+    "vue-i18n": "^9.2.2"
   },
   "dependencies": {
     "@docsearch/js": "^3.0.0",
