--- a/docs/package.json
+++ b/docs/package.json
@@ -23,6 +23,7 @@
     "colord": "^2.9.2",
     "mitt": "^3.0.0",
     "prismjs": "^1.28.0",
+    "tailwind-merge": "^1.13.2",
     "vue-gtag": "^2.0.1"
   }
 }
