--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "equal-vue",
-  "version": "0.92.0",
+  "version": "0.93.0",
   "homepage": "https://equal-ui.github.io/Equal/",
   "description": "Equal is a Vue 3 hackable UI library empowered by tailwindcss",
   "author": {
@@ -20,7 +20,6 @@
   },
   "unpkg": "dist/equal.umd.min.js",
   "types": "./dist/index.d.ts",
-  "private": false,
   "license": "MIT",
   "bugs": "https://github.com/Equal-UI/Equal/issues",
   "repository": {
@@ -92,8 +91,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "vite": "^2.0.0-beta.40",
-    "vitest": "^0.5.9",
     "vite-plugin-dts": "^1.7.2",
+    "vitest": "^0.5.9",
     "vue-eslint-parser": "^7.5.0"
   },
   "dependencies": {
@@ -102,6 +101,7 @@
     "@vueuse/integrations": "^5.0.3",
     "body-scroll-lock": "^3.1.5",
     "colord": "^2.9.2",
+    "tailwind-merge": "^1.13.2",
     "vue": "^3.0.5"
   }
 }
