--- a/package.json
+++ b/package.json
@@ -54,17 +54,13 @@
     "lint:stylelint": "stylelint **/*.{less,vue} --syntax less"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/plugin-transform-typescript": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@types/body-scroll-lock": "^2.6.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "@vitejs/plugin-vue":  "^4.0.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/babel-preset-app": "^4.5.6",
     "@vue/babel-preset-jsx": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
@@ -90,10 +86,7 @@
     "tailwindcss": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "vite": "^5.4.10",
-    "vite-plugin-dts": "^1.7.2",
-    "vitest": "^2.1.3",
-    "vue-eslint-parser": "^7.5.0"
+    "vite": "^5.4.10"
   },
   "dependencies": {
     "@floating-ui/dom": "^0.5.4",
@@ -101,7 +94,9 @@
     "@vueuse/integrations": "^11.1.0",
     "body-scroll-lock": "^3.1.5",
     "colord": "^2.9.2",
+    "focus-trap": "^7.6.0",
     "tailwind-merge": "^1.13.2",
+    "vite-plugin-dts": "^4.3.0",
     "vue": "^3.0.5"
   }
 }
